[23] JEP 476: Module Import Declarations (Preview)
Implement reads() as reflexive property

Tests:
+ switch style to using writeFilesCollecting
  + ensure testFileNames!=null implies shouldFlush*=false
+ run.javac improved for runConformModuleTest()
+ excuse for javac not considering reflexive 'reads'
+ adjust ModuleCompilationTests.testReleaseOption15: new javac warn